--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -13,10 +13,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 20px;
   }
 h1 {
     text-align: left;
-    font-size: 15px;
+    font-size: 20px;
     color: #e4e4d9;
   }
 
@@ -27,6 +28,7 @@ h1 {
     align-items: center;
     width: 100%;
     margin: 0 auto;
+    margin-top: 20px;
   }
 
 .item {
@@ -47,7 +49,7 @@ h1 {
   }
 
 form {
-    width: 40%;
+    width: 30%;
     display: flex;
     justify-content: flex-end;
   }
@@ -60,7 +62,7 @@ form {
         width: 240px;
         outline: 0;
         color: white;
-        margin-right: 8px;
+        margin-right: 6px;
         border-radius: 7px;
     }
 
